<resources>
    <string name="app_name">MovieApp</string>
    <string name="trending">Trending</string>
    <string name="about_movie">About Movie</string>
    <string name="cast">Cast</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="trailars">Trailars</string>
    <string name="movie_title">Movie Title</string>
    <string name="date_genres_duration">Date - Genres - Duration</string>
    <string name="year">Year</string>
    <string name="_00_minutes">00 Minutes</string>
    <string name="action">Action</string>
    <string name="what_do_you_want_to_watch">What do you want to watch?</string>
</resources>