<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.view.MovieDetailsActivity">

    <RelativeLayout
        android:id="@+id/rv_tool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_banner"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_tool"
        app:riv_corner_radius="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/riv_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/riv_banner"
        app:layout_constraintTop_toBottomOf="@+id/rv_tool">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailars"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/riv_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riv_banner">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/riv_poster"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:elevation="10dp"
            android:src="@drawable/image_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/riv_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riv_banner"
            app:riv_corner_radius="5dp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/riv_banner" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/date_genres_duration"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

    <LinearLayout
        android:id="@+id/ll_time_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:baselineAligned="false" android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/tv_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:importantForAccessibility="no" android:padding="2dp"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:includeFontPadding="false"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:includeFontPadding="false"
                android:text="@string/_00_minutes"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:src="@drawable/ic_vignette" />

            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:includeFontPadding="false"
                android:text="@string/action"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_about_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_time_details">

        <LinearLayout
            android:id="@+id/ll_about_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/about_movie"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_about_movie"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_cast"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="20dp"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_about_cast" />


    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:padding="16dp"
        android:visibility="gone"
        android:id="@+id/shimmer_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details"
        app:shimmer_auto_start="true"
        app:shimmer_direction="left_to_right"
        app:shimmer_duration="1500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <!-- Shimmer Item 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color"/>

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <!-- Shimmer Item 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <!-- Shimmer Item 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@color/placeholder_color"/>

                    <View
                        android:layout_width="60dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@color/placeholder_color" />
                </LinearLayout>

            </GridLayout>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_about_cast" />

</androidx.constraintlayout.widget.ConstraintLayout>